--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
     <title>WebpackStarter</title>
   </head>
   <body>
-    <div id="root">
-      <h1>Hello!</h1>
-    </div>
+    <h1>Hello!</h1>
+    <div id="root"></div>
   </body>
 </html>
